Tried to fix the tooltips but only found a temporary workaround (align them to the right). Needs more investigations. Tidied up skill choosing.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,3 +17,8 @@
 .table-divider{
   display: table-row;
 }
+
+.container-fluid {
+  width: 100%;
+  padding: 4%;
+}
