--- a/src/app/chronicon-skill/chronicon-skill.component.css
+++ b/src/app/chronicon-skill/chronicon-skill.component.css
@@ -8,6 +8,9 @@
   height: 100%;
   border-radius: 50%;
   position: absolute;
+}
+
+.skill_icon{
   background-image: url('/assets/icons.png');
   background-color: black;
   background-position-y: 0;
@@ -15,7 +18,6 @@
   background-size: auto 100%;
   image-rendering: pixelated
 }
-
 .chronicon-skill-count {
   position: absolute;
   right: 0;
@@ -55,8 +57,6 @@
 }
 
 .chronicon-skill-selection {
-  width: 64px;
-  height: 64px;
   position: relative; /* All 'absolute'ly positioned elements are relative to this one */
   background: black url("/assets/plus.svg");
   background-size: cover;
@@ -64,14 +64,14 @@
 }
 
 .chronicon-skill-selection-tooltip {
-  top: -5px;
-  left: -5px;
+  top: -4px;
+  left: -4px;
   height: 70px;
   position: absolute;
-  z-index: 100;
-  background-color: black;
-  color: goldenrod;
-  width: 300px;
-  padding: 0px 5px 5px 5px;
+  z-index: 2;
   border-radius: 10px;
+}
+
+.popover{
+  z-index: 100 !important;
 }
